--- a/danisite_2/css/caracteristicas.css
+++ b/danisite_2/css/caracteristicas.css
@@ -221,6 +221,39 @@ body {
     background-color: #c9c7c7;
 }
 
+
+/* Botão de voltar no começo da página */
+.botao-topo {
+    font-weight: 300;
+    letter-spacing: 3px;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-align:end;
+    line-height: 1.6;
+    padding: 10px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    width: 60px;
+    height: 20px;
+    z-index: 999;
+    background-color: #375955;
+    color: #407972;
+    border-radius: 5px;
+    text-decoration: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0s 0.3s;
+}
+
+.botao-topo.show {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s ease;
+}
+
+
+
 /* Media Query de 700px */
 @media (max-width: 700px) {
     .container {
